[package]
name = "render-md"
version = "0.1.0"
edition = "2021"

[dependencies]
pulldown-cmark = { version = "0.11", default-features = false }
pulldown-cmark-escape = "0.11"

next-gen = "0.1"

fs-err = "2.11"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1"
lol_html = "2"
corosensei = "0.1.4"
pin-project-lite = "0.2"
tracing = "0.1.37"
url = "2"

percent-encoding = "2"
ammonia = "3"
